# nomforge

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/nomforge-cli/: Cargo.toml
crates/nomforge-cli/src/: args.rs  main.rs  output.rs
crates/nomforge-cli/src/commands/: mod.rs  rename.rs  undo.rs
crates/nomforge-cli/tests/: rename_e2e.rs  undo_e2e.rs
crates/nomforge-cli/tests/common/: mod.rs
crates/nomforge-core/: Cargo.toml
crates/nomforge-core/src/: conflict.rs  display.rs  engine.rs  error.rs  lib.rs  scanner.rs  undo.rs
crates/nomforge-core/src/rules/: case_transform.rs  counter.rs  extension.rs  find_replace.rs  mod.rs  prefix_suffix.rs  regex_replace.rs  remove_text.rs
crates/nomforge-core/tests/: conflict_detection.rs  counter_sequencing.rs  error_and_edge_cases.rs  extension_change.rs  regex_rename.rs  rename_workflow.rs  scanner_integration.rs  undo_workflow.rs
crates/nomforge-core/tests/common/: mod.rs
crates/nomforge-gui/: Cargo.toml
crates/nomforge-gui/src/: app.rs  main.rs  state.rs
crates/nomforge-gui/src/panels/: folder_picker.rs  mod.rs  preview_table.rs  rule_builder.rs  status_bar.rs
crates/nomforge-gui/src/widgets/: conflict_badge.rs  mod.rs  rule_card.rs
