[package]
name = "nomforge-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for nomforge bulk file renamer"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nomforge"
path = "src/main.rs"

[dependencies]
nomforge-core = { path = "../nomforge-core" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
colored = "3"
