[package]
name = "nomforge-cli"
version.workspace = true
edition.workspace = true
description = "CLI for nomforge bulk file renamer"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[[bin]]
name = "nomforge-cli"
path = "src/main.rs"

[dependencies]
nomforge-core = { path = "../nomforge-core" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
colored = "3"

[dev-dependencies]
tempfile = "3"
