[package]
name = "nomforge-core"
version.workspace = true
edition.workspace = true
description = "Core library for nomforge bulk file renamer"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
regex = "1.12"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
