[package]
name = "nomforge-gui"
version.workspace = true
edition.workspace = true
description = "GUI for nomforge bulk file renamer"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[[bin]]
name = "nomforge"
path = "src/main.rs"

[dependencies]
nomforge-core = { path = "../nomforge-core" }
eframe = "0.35"
rfd = "0.17"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
